--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
           <li class="nav-item"><a class="nav-link" href="#">About</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
           <li class="nav-item"><a class="nav-link" href="account.html">Account</a></li>
+            <li class="nav-item"><a class="nav-link" href="cart.html">Cart</a></li>
         </ul>
         <a href="account.html" class="text-decoration-none text-dark" style="margin-right: 15px; width: 30px;"><i class="fa-solid fa-user"></i>
         </a>
