--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="style.css">
   <style>
     .header {
-      background: #f5f5f5;
+      background: #fff;
       padding: 40px 0;
     }
     .btn {
@@ -62,7 +62,7 @@
           <li class="nav-item"><a class="nav-link" href="#">About</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
           <li class="nav-item"><a class="nav-link" href="account.html">Account</a></li>
-            <li class="nav-item"><a class="nav-link" href="cart.html">Cart</a></li>
+          <li class="nav-item"><a class="nav-link" href="cart.html"></a></li>
         </ul>
         <a href="account.html" class="text-decoration-none text-dark" style="margin-right: 15px; width: 30px;"><i class="fa-solid fa-user"></i>
         </a>
@@ -81,16 +81,16 @@
   </header>
 
   <!-- main Section -->
-  <div class="header text-center text-lg-start">
+  <div class="header text-center text-lg-start" style="background-color: rgb(208, 221, 230);">
     <div class="container py-5">
       <div class="row align-items-center">
         <div class="col-lg-6">
-          <h1>Give your Workout<br>A New Style!</h1>
+          <h1>Give your Health<br>A New Style!</h1>
           <p>Success isn't always about greatness. It's about consistency. Consistent hard work gains success. Greatness will come.</p>
           <a href="products.html" class="btn">Explore Now &#8594;</a>
         </div>
         <div class="col-lg-6 text-center">
-          <img src="images/image1.png" alt="Workout" class="img-fluid">
+          <img src="images/image1-removebg-preview.png" alt="Workout" class="img-fluid">
         </div>
       </div>
     </div>
@@ -120,13 +120,13 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-6 text-center">
-          <img src="images/image1.png" alt="Offer" class="offer-img img-fluid">
+          <img src="images/image1-removebg-preview.png" alt="Offer" class="offer-img img-fluid">
         </div>
         <div class="col-md-6">
           <p>Exclusively Available on RedStore</p>
-          <h1>Sports Shoes</h1>
+          <h1>Health Food</h1>
           <small>
-            Buy the latest collection of sports shoes online on Redstore at the best prices from top brands such as Adidas, Nike, Puma, and more.
+            Buy the latest collection of Helathy Food online on Redstore at the best prices from top brands such as Adidas, Nike, Puma, and more.
           </small>
           <br>
           <a href="products.html" class="btn">Buy Now &#8594;</a>
@@ -141,6 +141,7 @@
       <h2 class="mb-4">What Our Customers Say</h2>
       <div class="row g-4">
         <!-- Testimonial 1 -->
+       
         <div class="col-md-4">
           <div class="p-4 border rounded">
             <i class="fa fa-quote-left fa-2x text-secondary"></i>
@@ -149,7 +150,7 @@
               <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i>
             </div>
             <img src="images/user-1.png" class="my-3" alt="User 1" width="60">
-            <h5>Sean Parker</h5>
+            <h5>Abdlerhman Talb</h5>
           </div>
         </div>
         <div class="col-md-4">
@@ -159,8 +160,8 @@
             <div class="rating">
               <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i>
             </div>
-            <img src="images/user-1.png" class="my-3" alt="User 1" width="60">
-            <h5>Sean Parker</h5>
+            <img src="images/user-2.jpg" class="my-3" alt="User 1" width="60">
+            <h5>John Ezat</h5>
           </div>
         </div>
         <div class="col-md-4">
@@ -170,43 +171,11 @@
             <div class="rating">
               <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i>
             </div>
-            <img src="images/user-1.png" class="my-3" alt="User 1" width="60">
-            <h5>Sean Parker</h5>
+            <img src="images/user-3.png" class="my-3" alt="User 1" width="60">
+            <h5>Mina Tawfik</h5>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="p-4 border rounded">
-            <i class="fa fa-quote-left fa-2x text-secondary"></i>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-            <div class="rating">
-              <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i>
-            </div>
-            <img src="images/user-1.png" class="my-3" alt="User 1" width="60">
-            <h5>Sean Parker</h5>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="p-4 border rounded">
-            <i class="fa fa-quote-left fa-2x text-secondary"></i>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-            <div class="rating">
-              <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i>
-            </div>
-            <img src="images/user-1.png" class="my-3" alt="User 1" width="60">
-            <h5>Sean Parker</h5>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="p-4 border rounded">
-            <i class="fa fa-quote-left fa-2x text-secondary"></i>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-            <div class="rating">
-              <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i>
-            </div>
-            <img src="images/user-1.png" class="my-3" alt="User 1" width="60">
-            <h5>Sean Parker</h5>
-          </div>
-        </div>
+
         <!-- Add more -->
       </div>
     </div>
@@ -218,7 +187,7 @@
       <div class="row justify-content-center">
         <div class="col-md-6 ">
           <img src="images/blue.png" alt="Logo" class="mb-3" width="300px">
-          <p>Our purpose is to sustainably make the pleasure and benefits of sports accessible to the many.</p>
+          <p>Our purpose is to sustainably make the pleasure and benefits of Food accessible to the many.</p>
         </div>
         <div class="col-md-6">
           <h5>Useful Links</h5>
